test/corpus/vibrations.txt
========================================
Media on ports, a hearing range, and enum state
========================================

2[CalibratedSculkSensor]3:
-> 0[filter: strength] = 0
-> 1[heard: strength{vibration}] ~: 16
=> 2[resonance: strength{contact}]
STATE phase: {inactive, active, cooldown} = inactive

---

(source_file
  (function_declaration
    (number)
    (identifier)
    (number))
  (input_parameter
    (pin_range
      (number))
    (identifier)
    (type)
    (number))
  (input_parameter
    (pin_range
      (number))
    (identifier)
    (type
      (type_arguments
        (medium)))
    (hearing_range
      (number)))
  (output_parameter
    (pin_range
      (number))
    (identifier)
    (type
      (type_arguments
        (medium))))
  (state_declaration
    (identifier)
    (setting_options
      (identifier)
      (identifier)
      (identifier))
    (identifier)))

========================================
HEAR with an ACCEPT filter, field access, and a computed time
========================================

HEAR(vib IN heard):
    {phase, sub{vib.dist, 8}}?
        -{inactive, 0}-> ACCEPT
    1 =: pending
    AFTER(floor{vib.dist}gt):
        vib =: last_freq

---

(source_file
  (hear_block
    (identifier)
    (identifier)
    (block
      (pattern_match
        (data_array
          (data_item
            (identifier))
          (data_item
            (operator_call
              (identifier)
              (field_access
                (identifier)
                (field_name))
              (number))))
        (pattern_case
          (pattern_value
            (identifier))
          (pattern_value
            (number))
          (pattern_result
            (control_statement))))
      (flow
        (flow_source
          (number))
        (state_write
          (identifier)))
      (after_block
        (computed_time
          (operator_call
            (identifier)
            (field_access
              (identifier)
              (field_name)))
          (time_unit))
        (block
          (flow
            (flow_source
              (identifier))
            (state_write
              (identifier))))))))

========================================
Named items and vibration links
========================================

{strobe: ready, data: low} =>
[ab{0}] ~(14)~> heard[css]

---

(source_file
  (flow
    (flow_source
      (data_array
        (data_item
          (named_item
            (identifier)
            (identifier)))
        (data_item
          (named_item
            (identifier)
            (identifier))))))
  (flow
    (flow_source
      (component_array
        (component_content
          (instance_ref
            (identifier)
            (index
              (number))))))
    (vibration_link
      (number))
    (flow_destination
      (parameter_ref
        (port_name)
        (identifier)))))

========================================
A filter arm says ACCEPT, and NOP ignores the rest
========================================

HEAR(vib IN heard):
    {phase, gap}?
        -{inactive, 0}-> ACCEPT
        -{**}-> NOP

---

(source_file
  (hear_block
    (identifier)
    (identifier)
    (block
      (pattern_match
        (data_array
          (data_item
            (identifier))
          (data_item
            (identifier)))
        (pattern_case
          (pattern_value
            (identifier))
          (pattern_value
            (number))
          (pattern_result
            (control_statement)))
        (pattern_case
          (pattern_value
            (pattern_repeat
              (wildcard)))
          (pattern_result
            (control_statement)))))))
